objects/Sponsorship__c.object
<CustomObject>
    <fields>
        <fullName>Acknowledgment_Status__c</fullName>
        <label>Acknowledgment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Email Acknowledgment Now</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseSafeOrphanId__c</fullName>
        <formula>CASESAFEID(Orphan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeOrphanId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_ID__c</fullName>
        <formula>Orphan__r.Sponsoree_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS Sponsoree ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Sponsorship_ID__c</fullName>
        <externalId>true</externalId>
        <label>DMS Sponsorship ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Donation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Donation</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sponsorships</relationshipLabel>
        <relationshipName>Sponsorships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donor_ID__c</fullName>
        <formula>Donor__r.Donor_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Donor (Organization)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Organization</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sponsorships</relationshipLabel>
        <relationshipName>Sponsorships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Donor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Donor</value>
            </filterItems>
            <filterItems>
                <field>Contact.Is_Donor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Organization</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sponsorships</relationshipLabel>
        <relationshipName>Sponsorships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orphan_Account_Name__c</fullName>
        <formula>Orphan__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orphan Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orphan_Country__c</fullName>
        <formula>TEXT(Orphan__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orphan Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orphan_First_Name__c</fullName>
        <formula>Orphan__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orphan First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orphan_First_Sponsorship_Date__c</fullName>
        <formula>Orphan__r.First_Sponsorship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orphan: First Sponsorship Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Orphan_Gender__c</fullName>
        <formula>Text( Orphan__r.Gender__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orphan Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orphan_Last_Name__c</fullName>
        <formula>Orphan__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orphan Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orphan__c</fullName>
        <label>Orphan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Orphan</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orphan Sponsorships</relationshipLabel>
        <relationshipName>Sponsoree</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Campaign__c</fullName>
        <formula>Recurring_Donation__r.npe03__Recurring_Donation_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Donation Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Status__c</fullName>
        <formula>Text( Recurring_Donation__r.npsp__Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Donation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Sponsorships</relationshipLabel>
        <relationshipName>Sponsorships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Due_Date__c</fullName>
        <label>Renewal Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Orphan_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Sponsorship</label>
    <nameField>
        <label>Sponsorship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsorships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>